1.fix configOptions state error 2.Incorporate several new sentences into the JSON file. 3.add    overflow-y: auto; on #MainScreenUI{

--- a/shadcn_next14/src/app/language_practice_tool/OptionsModal.css
+++ b/shadcn_next14/src/app/language_practice_tool/OptionsModal.css
@@ -27,7 +27,10 @@
 
 #MainScreenUI{
   position: fixed;
+  width: 100%;
+  height: 100%;
   left: -100%;
+  overflow-y: auto;
   transition: left var(--transition-duration) ease; 
 }
 
